dd-1148 fix hero spacing

--- a/src/AppBundle/Resources/assets/scss/components/_hero.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_hero.scss
@@ -2,7 +2,7 @@
     
     background: $turquoise;
     padding: 30px 0 37px 0;
-    margin-top: 28px;
+    margin: 28px 0 30px 0;
     text-align: center;
     
     h2 {
